--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,1 +1,14 @@
-{"dependencies":{}}
+{
+  "dependencies": {
+    "coc-eslint": ">=1.4.5",
+    "coc-explorer": ">=0.15.6",
+    "coc-json": ">=1.3.4",
+    "coc-marketplace": ">=1.8.0",
+    "coc-prettier": ">=1.1.20",
+    "coc-python": ">=1.2.13",
+    "coc-rls": ">=1.1.6",
+    "coc-snippets": ">=2.4.0",
+    "coc-tsserver": ">=1.6.7",
+    "coc-vimlsp": ">=0.11.0"
+  }
+}
