--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -16,31 +16,10 @@
 ;
 ;==========================================================
 
-[colors]
-background = #EE0e1114
-background-alt = %background%
-foreground = #fff
-foreground-alt = %foreground%
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
+# load config
+include-file = $HOME/.config/polybar/variables.config
 
-[pwl]
-foreground-1 = #8d62a9
-background-1 = ${colors.background}
-foreground-2 = #668bd7
-background-2 = #8d62a9
-foreground-3 = #8b62a9
-background-3 = #668bd7
-foreground-tray = #668bd7
-background-tray = #000000
-; background-tray = ${colors.background}
-
-[fonts]
-main-0 = "SF Pro Text:pixelsize=10:weight=medium;2"
-main-1 = "Inconsolata for Powerline:pixelsize=15:antialias=true;3"
-main-2 = "Font Awesome 5 Free:style=Regular:pixelsize=9;1"
-
+# load components
 include-file = $HOME/.config/polybar/components/powerline-polybar.config
 
 ##########################################
