--- a/.config/polybar/modules.config
+++ b/.config/polybar/modules.config
@@ -7,6 +7,17 @@ background = ${pwl.background-tray}
 background-next = ${pwl.background-3}
 content-background = ${self.background}
 
+[module/updates]
+type = custom/script
+exec = paru -Qu | wc -l
+interval = 3600
+label = "  %output% "
+
+inherit = powerline-templates/right-to-left-item
+background = ${pwl.background-2}
+background-next = ${colors.background}
+format-background = ${self.background}
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
@@ -66,6 +77,8 @@ type = internal/battery
 battery = BAT0
 adapter = ACAD
 full-at = 98
+
+format-background = ${pwl.background-tray}
 
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = #ffb52a
