Add more fonts for font awesome

--- a/.config/polybar/variables.config
+++ b/.config/polybar/variables.config
@@ -21,4 +21,6 @@ background-tray = #000000
 [fonts]
 main-0 = "SF Pro Text:pixelsize=10:weight=medium;2"
 main-1 = "Inconsolata for Powerline:pixelsize=15:antialias=true;3"
-main-2 = "Font Awesome 5 Free:style=Regular:pixelsize=9;1"
+main-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
+main-3 = "Font Awesome 5 Free:style=Solid:pixelsize=8;1"
+main-4 = "Font Awesome 5 Brands:pixelsize=8;1"
