--- a/.config/polybar/variables.config
+++ b/.config/polybar/variables.config
@@ -8,15 +8,10 @@ secondary = #e60053
 alert = #bd2c40
 
 [pwl]
-foreground-1 = #8d62a9
 background-1 = ${colors.background}
-foreground-2 = #668bd7
-background-2 = #8d62a9
-foreground-3 = #8b62a9
-background-3 = #668bd7
-foreground-tray = #668bd7
+background-2 = #ff4343
+background-3 = #4488ff
 background-tray = #000000
-; background-tray = ${colors.background}
 
 [fonts]
 main-0 = "SF Pro Text:pixelsize=10:weight=medium;2"
