--- a/.config/polybar/modules.config
+++ b/.config/polybar/modules.config
@@ -15,8 +15,70 @@ label = "  %output% "
 
 inherit = powerline-templates/right-to-left-item
 background = ${pwl.background-2}
-background-next = ${colors.background}
+background-next = ${pwl.background-3}
 format-background = ${self.background}
+
+[module/date]
+type = internal/date
+interval = 1
+
+inherit = powerline-templates/right-to-left-item
+background = ${pwl.background-3}
+background-next = ${pwl.background-2}
+format-background = ${self.background}
+
+date = %b %d
+time = %H:%M:%S
+label = " %date%  %time% "
+
+[module/cpu]
+type = internal/cpu
+interval = 1
+label = "  %percentage%% "
+
+inherit = powerline-templates/right-to-left-item
+background = ${pwl.background-3}
+background-next = ${pwl.background-2}
+format-background = ${self.background}
+
+[module/os-menu]
+type = custom/text
+content = "      "
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = ACAD
+full-at = 98
+
+format-background = ${pwl.background-tray}
+
+format-charging = <animation-charging> <label-charging>
+format-charging-underline = #ffb52a
+
+format-discharging = <animation-discharging> <label-discharging>
+format-discharging-underline = ${self.format-charging-underline}
+
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-underline = ${self.format-charging-underline}
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-foreground = ${colors.foreground-alt}
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-framerate = 750
+
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-foreground = ${colors.foreground-alt}
+animation-discharging-framerate = 750
 
 [module/xwindow]
 type = internal/xwindow
@@ -58,51 +120,3 @@ label-urgent-padding = 2
 
 ; Separator in between workspaces
 ; label-separator = |
-
-[module/date]
-type = internal/date
-interval = 1
-
-inherit = powerline-templates/right-to-left-item
-background = ${pwl.background-3}
-background-next = ${pwl.background-2}
-format-background = ${self.background}
-
-date = %b %d
-time = %H:%M:%S
-label = " %date%  %time% "
-
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = ACAD
-full-at = 98
-
-format-background = ${pwl.background-tray}
-
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
-
-format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
-animation-discharging-framerate = 750
