Add extra font and move window height and width to vars

--- a/.config/polybar/variables.config
+++ b/.config/polybar/variables.config
@@ -19,3 +19,8 @@ main-1 = "Inconsolata for Powerline:pixelsize=15:antialias=true;3"
 main-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
 main-3 = "Font Awesome 5 Free:style=Solid:pixelsize=8;1"
 main-4 = "Font Awesome 5 Brands:pixelsize=8;1"
+main-5 = "JetBrainsMono Nerd Font:pixelsize=10;1"
+
+[config]
+height = 20
+width = 100%
