--- a/.config/leftwm/themes/polybar/polybar.config
+++ b/.config/leftwm/themes/polybar/polybar.config
@@ -21,7 +21,7 @@ include-file = $HOME/.config/polybar/config
 
 [bar/mainbar0]
 inherit = bar/mainbar-left
-modules-left = workspace0
+modules-left = os-menu workspace0
 [module/workspace0]
 type = custom/script
 exec = leftwm-state -w 0 -t $SCRIPTPATH/template.liquid
@@ -29,7 +29,7 @@ tail = true
 
 [bar/mainbar1]
 inherit = bar/mainbar-left
-modules-left = workspace1
+modules-left = os-menu workspace1
 [module/workspace1]
 type = custom/script
 exec = leftwm-state -w 1 -t $SCRIPTPATH/template.liquid
@@ -37,7 +37,7 @@ tail = true
 
 [bar/mainbar2]
 inherit = bar/mainbar-left
-modules-left = workspace2
+modules-left = os-menu workspace2
 [module/workspace2]
 type = custom/script
 exec = leftwm-state -w 2 -t $SCRIPTPATH/template.liquid
@@ -45,7 +45,7 @@ tail = true
 
 [bar/mainbar3]
 inherit = bar/mainbar-left
-modules-left = workspace3
+modules-left = os-menu workspace3
 [module/workspace3]
 type = custom/script
 exec = leftwm-state -w 3 -t $SCRIPTPATH/template.liquid
