Switch to rofi over dmenu but add backup shortcut for dmenu

--- a/.config/leftwm/config.toml
+++ b/.config/leftwm/config.toml
@@ -4,9 +4,15 @@ tags = ["dev", "www", "chat"]
 
 [[keybind]]
 command = "Execute"
-value = "dmenu_run"
+value = "rofi -show run -theme main-theme"
 modifier = ["Alt"]
 key = "space"
+
+[[keybind]]
+command = "Execute"
+value = "dmenu_run"
+modifier = ["modkey"]
+key = "p"
 
 [[keybind]]
 command = "Execute"
