Add os-menu module

--- a/.config/polybar/modules.config
+++ b/.config/polybar/modules.config
@@ -44,6 +44,7 @@ format-background = ${self.background}
 [module/os-menu]
 type = custom/text
 content = "      "
+click-left = $HOME/scripts/menus/os-menu/os-menu.sh
 
 [module/battery]
 type = internal/battery
