Update bar name to inherit

--- a/.config/leftwm/themes/polybar/polybar.config
+++ b/.config/leftwm/themes/polybar/polybar.config
@@ -20,7 +20,7 @@
 include-file = $HOME/.config/polybar/config
 
 [bar/mainbar0]
-inherit = bar/mainbar-left
+inherit = bar/main-left
 modules-left = os-menu workspace0
 [module/workspace0]
 type = custom/script
@@ -28,7 +28,7 @@ exec = leftwm-state -w 0 -t $SCRIPTPATH/template.liquid
 tail = true
 
 [bar/mainbar1]
-inherit = bar/mainbar-left
+inherit = bar/main-left
 modules-left = os-menu workspace1
 [module/workspace1]
 type = custom/script
@@ -36,7 +36,7 @@ exec = leftwm-state -w 1 -t $SCRIPTPATH/template.liquid
 tail = true
 
 [bar/mainbar2]
-inherit = bar/mainbar-left
+inherit = bar/main-left
 modules-left = os-menu workspace2
 [module/workspace2]
 type = custom/script
@@ -44,7 +44,7 @@ exec = leftwm-state -w 2 -t $SCRIPTPATH/template.liquid
 tail = true
 
 [bar/mainbar3]
-inherit = bar/mainbar-left
+inherit = bar/main-left
 modules-left = os-menu workspace3
 [module/workspace3]
 type = custom/script
