Add bind to open custom os menu

--- a/.config/leftwm/config.toml
+++ b/.config/leftwm/config.toml
@@ -10,6 +10,12 @@ key = "space"
 
 [[keybind]]
 command = "Execute"
+value = "$HOME/scripts/menus/os-menu/os-menu.sh"
+modifier = ["modkey"]
+key = "o"
+
+[[keybind]]
+command = "Execute"
 value = "dmenu_run"
 modifier = ["modkey"]
 key = "p"
