Add memory and utc time modules

--- a/.config/polybar/modules.config
+++ b/.config/polybar/modules.config
@@ -14,8 +14,8 @@ interval = 3600
 label = "  %output% "
 
 inherit = powerline-templates/right-to-left-item
-background = ${pwl.background-2}
-background-next = ${pwl.background-3}
+background = ${pwl.background-3}
+background-next = ${pwl.background-2}
 format-background = ${self.background}
 
 [module/date]
@@ -31,14 +31,35 @@ date = %b %d
 time = %H:%M:%S
 label = " %date%  %time% "
 
+[module/utc-date]
+type = custom/script
+exec = TZ=UTC date +"%H:%M"
+interval = 1
+label = " UTC %output% "
+
+inherit = powerline-templates/right-to-left-item
+background = ${pwl.background-2}
+background-next = ${pwl.background-3}
+format-background = ${self.background}
+
 [module/cpu]
 type = internal/cpu
 interval = 1
 label = "  %percentage%% "
 
 inherit = powerline-templates/right-to-left-item
+background = ${pwl.background-2}
+background-next = ${pwl.background-3}
+format-background = ${self.background}
+
+[module/memory]
+type = internal/memory
+interval = 1
+label = "  %gb_free% "
+
+inherit = powerline-templates/right-to-left-item
 background = ${pwl.background-3}
-background-next = ${pwl.background-2}
+background-next = ${pwl.background-1}
 format-background = ${self.background}
 
 [module/os-menu]
