--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -16,6 +16,9 @@
 ;
 ;==========================================================
 
+##########################################
+#               Dependencies
+##########################################
 # load config
 include-file = $HOME/.config/polybar/variables.config
 include-file = $HOME/.config/polybar/modules.config
@@ -57,7 +60,7 @@ font-5 = ${fonts.main-5}
 
 modules-left = os-menu
 modules-center =
-modules-right = cpu updates date tray-arrow battery
+modules-right = memory cpu updates utc-date date tray-arrow battery
 
 separator =
 
@@ -104,7 +107,7 @@ font-5 = ${fonts.main-5}
 
 modules-left = os-menu
 modules-center =
-modules-right = cpu updates date tray-arrow battery
+modules-right = memory cpu updates utc-date date tray-arrow battery
 
 separator =
 
